syntax = "proto3";

package company_service;

option go_package = "olympy/api-gateway/genproto/company_service;company_service";

service CompanyService {
  rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse);
  rpc GetCompany(GetCompanyRequest) returns (GetCompanyResponse);
  rpc UpdateCompany(UpdateCompanyRequest) returns (UpdateCompanyResponse);
  rpc DeleteCompany(DeleteCompanyRequest) returns (DeleteCompanyResponse);
  rpc ListCompanies(ListCompaniesRequest) returns (ListCompaniesResponse);
}

message Company {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string website = 5;
  string phone = 6;
  string email = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateCompanyRequest {
  string name = 1;
  string description = 2;
  string address = 3;
  string website = 4;
  string phone = 5;
  string email = 6;
}

message CreateCompanyResponse {
  Company company = 1;
  string message = 2;
}

message GetCompanyRequest {
  int64 id = 1;
}

message GetCompanyResponse {
  Company company = 1;
}

message UpdateCompanyRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string website = 5;
  string phone = 6;
  string email = 7;
}

message UpdateCompanyResponse {
  Company company = 1;
  string message = 2;
}

message DeleteCompanyRequest {
  int64 id = 1;
}

message DeleteCompanyResponse {
  string message = 1;
}

message ListCompaniesRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3; // Search by name or description
}

message ListCompaniesResponse {
  repeated Company companies = 1;
  int64 total = 2;
  int32 page = 3;
  int32 limit = 4;
}
